--- a/README.html
+++ b/README.html
@@ -1,27 +1,37 @@
----
-title: "README"
-author: "Harry Buckley"
-date: "17/01/2022"
-output: html_document
----
+# C7082 - Computer Vision to detect blight in potato leaves
+The repository for the C7082 Machine Learning and AI assignment
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = F)
-```
+# Background
+Potato blight is a disease that has a historically noticeable presence and has caused food shortages in a
+range of countries; the most harrowing example is the Irish potato famine in the mid 1800’s (O’Neill, 2009).
+The current methods of controlling the disease which is caused by the fungus Phytophthora infestans (late
+blight) and Alternaria Solani (early blight), is to employ a spray program that requires field wide chemical
+treatment of crops: up to twice a week, depending on the chemical being used (Leesutthiphonchai et al.,
+2018). With the world population expected to increase to around 9.1 billion by 2050 (Cohen, 2001), the need
+for secure food production in the future is important if we are to supply the increase in people. With genetic
+modification (GM) currently not an option in the UK, a line of potatoes with full resistance to blight would
+not be available for at least 30 years due to the time it takes to breed in a gene (Ceccarelli, 2015; Haverkort
+et al., 2009).
+There have been observations of reduced efficacy in the chemical control of blight when using active ingredients such as fluazinam (Schepers et al., 2018). This can be attributed to the overuse of a chemical strategy
+and a build-up of resistance in the fungus. The active ingredients used in the control of blight has deadly
+and long-lasting effects on the environment and is highly toxic to humans (EFSA, 2008). It has been seen
+to cause severe damage to aquatic habitats and this can easily occur in the UK where chemical are applied
+in adverse conditions and creates run-off.
+For the reasons of environmental sustainability and with the cost of applications adversely affecting the
+producers’ profit margins, the implementation of blight recognition using a machine learning technique
+could provide a future proof, precision application method of blight control. For example, the adaption of
+a drone to carry out fungicide application with a camera attached to recognise plants that have a blight
+infection could reduce the amount of fungicide used, increasing profit margins, and prevent the field wide
+application of the pesticide which will reduce the chance of run-off.
+As the data set used in this assignment is made up of images, the decision was made to use Convolutional
+Neural Networks (CNN) to analyse and classify the images. CNNs have been proven in their use for classification tasks and provide a high accuracy, when tuned correctly, on validation data sets (Yoo, 2015). The
+objectives of this assignment are:
 
-# README
+1. Use different pre-trained models to identify an image of a healthy leaf, a late blight infected leaf and
+an early blight infected leaf
+2. Tune the model that produced the lowest validation accuracy, in the first run, to see if it is possible to
+outperform the initial validation accuracy of the best performing model (first run).
 
-This is the repository for the assignment of Harry Buckley in the module C7018 - 
-Statistical Analysis for Data Science. 
-
-This is in accordance with the requirements 
-to gain a Masters degree in Data Science for Global Agriculture.
-
-The objectives of this assignment are:
-
- 1.Use different pre-trained models to identify an image of a healthy leaf, a late blight infected leaf and an early blight infected leaf.
- 2.Tune the model that produced the lowest validation accuracy, in the first run, to see if it is possible to outperform the initial validation accuracy of the best performing model (first run).
- 
 # Files 
 [PDF of report](https://github.com/BUCKERS99/C7082---Assignment/blob/main/17239400_C7082.pdf)
 
